--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
                 <div class="x_panel">
                     <div class="x_title">
                         <h2>Your Choice<small>Our Priority!</small></h2>
-                        <ul class="nav navbar-right panel_toolbox">
+                        <ul class="nav navbar-right panel_toolbox" style="min-width: 0 !important">
                             <li>
                                 <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                             </li>
@@ -97,7 +97,7 @@
                 <div class="x_panel">
                     <div class="x_title">
                         <h2>Crops</h2>
-                        <ul class="nav navbar-right panel_toolbox">
+                        <ul class="nav navbar-right panel_toolbox" style="min-width: 0 !important">
                             <li>
                                 <a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                             </li>
