--- a/templates/base.html
+++ b/templates/base.html
@@ -158,6 +158,17 @@
                                         <a href="#"><i class="fa fa-home"></i> Home </a>
                                     </li>
                                     <li>
+                                        <a>
+                                            <i class="fa fa-edit"></i> Rest Framework <span class="fa fa-chevron-down"></span>
+                                        </a>
+                                        <ul class="nav child_menu">
+                                            <li><a href="/api/v1/">Api Root</a></li>
+                                            <li><a href="/api/v1/endpoints">Endpoint List</a></li>
+                                            <li><a href="/api/v1/mlalgorithms">Ml Algorithm List</a></li>
+                                            <li><a href="/api/v1/mlrequests">ML Requests</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
                                         <a href="#"><i class="fa fa-list-alt"></i> FAQ </a>
                                     </li>
                                     <li>
