--- a/templates/base.html
+++ b/templates/base.html
@@ -165,6 +165,7 @@
                                             <li><a href="/api/v1/">Api Root</a></li>
                                             <li><a href="/api/v1/endpoints">Endpoint List</a></li>
                                             <li><a href="/api/v1/mlalgorithms">Ml Algorithm List</a></li>
+                                            <li><a href="/api/v1/cropsyield_classifier/predict?status=production&version=0.0.1">Predict View</a></li>
                                             <li><a href="/api/v1/mlrequests">ML Requests</a></li>
                                         </ul>
                                     </li>
