--- a/templates/base.html
+++ b/templates/base.html
@@ -167,6 +167,7 @@
                                             <li><a href="/api/v1/mlalgorithms">Ml Algorithm List</a></li>
                                             <li><a href="/api/v1/cropsyield_classifier/predict?status=production&version=0.0.1">Predict View</a></li>
                                             <li><a href="/api/v1/mlrequests">ML Requests</a></li>
+                                            <li><a href="/api/v1/abtests">A/B Tests</a></li>
                                         </ul>
                                     </li>
                                     <li>
