--- a/templates/index.html
+++ b/templates/index.html
@@ -165,6 +165,24 @@
         </div>
         <div class="row">
             <div class="col-md-12">
+
+                <div class="modal fade bs-example-modal-lg" tabindex="-1" role="dialog" style="display: none;" aria-hidden="true">
+                    <div class="modal-dialog modal-lg">
+                        <div class="modal-content">
+
+                            <div class="modal-header">
+                                <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+                                <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <h4>Crop Yield</h4>
+                                <p id="crop_yield_value"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="x_panel">
                     <div class="x_title">
                         <h2>Crops</h2>
